--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -26,6 +26,15 @@
   "shiftKey": "Umschalt",
   "altKey": "Alt",
   "error": "Fehler",
+  "oneMinute": "Eine Minute",
+  "minutes": "{} Minuten",
+  "oneHour": "Eine Stunde",
+  "hours": "{} Stunden",
+  "oneDay": "Ein Tag",
+  "days": "{} Tage",
+  "oneWeek": "Eine Woche",
+  "oneMonth": "Ein Monat",
+  "oneYear": "Ein Jahr",
   "cache": "Cache",
   "file": "Datei",
   "device": "Gerät",
@@ -408,6 +417,11 @@
   "setGenShowAppLogs": "App-Logs anzeigen",
   "setGenReloadApp": "App neu laden",
   "setGenFieldLabelDblClickAutoType": "Auto-Type durch Anklicken von Beschriftungen aktivieren",
+  "setGenTouchId": "Fingerabdruck",
+  "setGenTouchIdDisabled": "Fingerabdruck nicht benutzen",
+  "setGenTouchIdMemory": "Nur mit Fingerabdruck entsperren, wenn KeeWeb aktiv ist",
+  "setGenTouchIdFile": "Benutze immer den Fingerabdruck anstatt das Master-Passwort",
+  "setGenTouchIdPass": "Benötige Master-Passwort nach",
   "setFilePath": "Dateipfad",
   "setFileStorage": "Diese Datei wird von {} geladen.",
   "setFileIntl": "Diese Datei ist im internen App-Speicher abgelegt",
