--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -26,6 +26,15 @@
   "shiftKey": "mayús",
   "altKey": "alt",
   "error": "error",
+  "oneMinute": "un minuto",
+  "minutes": "{} minutos",
+  "oneHour": "una hora",
+  "hours": "{} horas",
+  "oneDay": "un día",
+  "days": "{} días",
+  "oneWeek": "una  semana",
+  "oneMonth": "un mes",
+  "oneYear": "un año",
   "cache": "caché",
   "file": "archivo",
   "device": "Dispositivo",
@@ -292,12 +301,17 @@
   "detIssuePwnedPassword": "La contraseña ha sido expuesta en una filtración de datos de acuerdo a {}, se recomienda cambiarla.",
   "detIssuePasswordCheckError": "Ha sucedido un error al comprobar en línea la fortaleza de la contraseña.",
   "detIssueOldPassword": "La contraseña es antigua.",
+  "detIssueCloseAlertHeader": "Ocultar problemas en las contraseñas",
+  "detIssueCloseAlertBody": "Hay diferentes formas de ocultar esta advertencia:",
+  "detIssueCloseAlertEntry": "No mostrar para esta entrada",
+  "detIssueCloseAlertSettings": "Ajustar opciones generales",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
   "autoTypeLink": "más...",
   "autoTypeError": "Error en autocompletado",
   "autoTypeErrorGeneric": "Se ha producido un fallo al realizar el autocompletado: {}",
+  "autoTypeErrorAccessibilityMacOS": "Intentamos mandar pulsaciones de tecla a la aplicación, pero no parece funcionar. Esto puede suceder porque faltan permisos, haz clic aquí para leer más acerca de ello:",
   "autoTypeErrorGlobal": "Por favor, abre la aplicación en la que quieres introducir tu contraseña para utilizar un atajo de teclado global",
   "autoTypeErrorNotInstalled": "{} no está instalado",
   "autoTypeHeader": "Autocompletado: Seleccionar",
@@ -355,7 +369,7 @@
   "setGenExtractingUpdate": "Extrayendo actualización...",
   "setGenCheckErr": "Se ha producido un error al descargar la nueva versión",
   "setGenNeverChecked": "Nunca se han comprobado actualizaciones ",
-  "setGenRestartToUpdate": "Reinicia la aplicación para actualizar",
+  "setGenRestartToUpdate": "Reinicia KeeWeb para actualizar",
   "setGenDownloadAndRestart": "Descargar actualización y reiniciar",
   "setGenAppearance": "Apariencia",
   "setGenTheme": "Tema",
@@ -415,12 +429,14 @@
   "setGenClearSeconds": "En {} segundos",
   "setGenClearMinute": "En un minuto",
   "setGenMinInstead": "Minimizar la aplicación en vez de cerrarla",
+  "setGenMinOnFieldCopy": "Minimizar al copiar campo",
   "setGenLock": "Bloqueo automático",
   "setGenLockMinimize": "Cuando la aplicación está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
   "setGenLockAutoType": "En autocompletado",
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
   "setGenStorage": "Almacenamiento",
+  "setGenDisableOfflineStorage": "No cachear los ficheros cargados en el almacenamiento offline",
   "setGenStorageLogout": "Cerrar sesión",
   "setGenShowAdvanced": "Mostrar ajustes avanzados",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
@@ -430,6 +446,12 @@
   "setGenShowAppLogs": "Mostrar registros de la aplicación",
   "setGenReloadApp": "Recargar la aplicación",
   "setGenFieldLabelDblClickAutoType": "Autocompletar al hacer doble clic sobre las etiquetas de los campos",
+  "setGenUseLegacyAutoType": "Usar autocompletado heredado (si tienes problemas)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "No usar Touch ID",
+  "setGenTouchIdMemory": "Desbloquear con Touch ID mientras KeeWeb está en ejecución",
+  "setGenTouchIdFile": "Usar siempre Touch ID con la contraseña maestra",
+  "setGenTouchIdPass": "Requerir contraseña maestra después de",
   "setGenAudit": "Auditar",
   "setGenAuditPasswords": "Mostrar advertencias sobre la fortaleza de las contraseñas",
   "setGenAuditPasswordEntropy": "Comprobar longitud y aleatoriedad de las contraseñas",
