--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "erreur",
+  "oneMinute": "une minute",
+  "minutes": "{} minutes",
+  "oneHour": "une heure",
+  "hours": "{} heures",
+  "oneDay": "un jour",
+  "days": "{} jours",
+  "oneWeek": "une semaine",
+  "oneMonth": "un mois",
+  "oneYear": "une année",
   "cache": "cache",
   "file": "fichier",
   "device": "appareil",
@@ -430,6 +439,11 @@
   "setGenShowAppLogs": "Voir les logs",
   "setGenReloadApp": "Recharger l'application",
   "setGenFieldLabelDblClickAutoType": "Remplissage auto par double clic sur les noms de champ",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Ne pas utiliser Touch ID",
+  "setGenTouchIdMemory": "Dévérouiller avec Touch ID uniquement quand Keeweb est lancé",
+  "setGenTouchIdFile": "Toujours utiliser Touch ID à la place du mot de passe",
+  "setGenTouchIdPass": "Exige le mot de passe après",
   "setGenAudit": "Audit",
   "setGenAuditPasswords": "Voir des avertissements sur la force du mot de passe",
   "setGenAuditPasswordEntropy": "Vérifier la longueur et l'aléas du mot de passe",
