--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -26,6 +26,15 @@
   "shiftKey": "maiusc",
   "altKey": "alt",
   "error": "errore",
+  "oneMinute": "un minuto",
+  "minutes": "{} minuti",
+  "oneHour": "un ora",
+  "hours": "{} ore",
+  "oneDay": "un giorno",
+  "days": "{} giorni",
+  "oneWeek": "una settimana",
+  "oneMonth": "un mese",
+  "oneYear": "un anno",
   "cache": "cache",
   "file": "file",
   "device": "dispositivo",
@@ -285,6 +294,9 @@
   "detRevealField": "Mostra",
   "detHideField": "Nascondi",
   "detAutoTypeField": "Auto scrittura",
+  "detIssueWeakPassword": "La password é debole, si raccomanda di cambiarla.",
+  "detIssuePoorPassword": "La password é molto debole, si raccomanda fortemente di cambiarla.",
+  "detIssueOldPassword": "La password è vecchia.",
   "autoTypeEntryFields": "Campi della voce",
   "autoTypeModifiers": "Modificatori",
   "autoTypeKeys": "Tasti",
@@ -316,6 +328,7 @@
   "appSaveErrorBody": "Errore nel salvataggio automatico",
   "appSaveErrorBodyMul": "Errore nel salvataggio automatico",
   "appSaveErrorExitLoseChanges": "Chiudi senza salvare le modifiche",
+  "appSaveErrorExitLoseChangesBody": "Puoi chiudere l'app e perdere le modifiche fatte, oppure esportare i dati dal menu File / Settings.",
   "appSettingsError": "Errore di caricamento",
   "appSettingsErrorBody": "Si è verificato un errore nel caricamento delle impostazioni. Per favore, ricontrolla l'URL della app o contatta il tuo amministratore.",
   "appNotSupportedError": "Il tuo browser non è supportato.",
@@ -351,15 +364,23 @@
   "setGenDownloadAndRestart": "Scarica aggiornamento e riavvia",
   "setGenAppearance": "Aspetto",
   "setGenTheme": "Tema",
+  "setGenThemeDefault": "Predefinito",
   "setGenThemeDark": "Scuro",
   "setGenThemeLight": "Chiaro",
   "setGenThemeFb": "Blu",
+  "setGenThemeBl": "Blu chiaro",
   "setGenThemeDb": "Marrone scuro",
+  "setGenThemeLb": "Marrone chiaro",
+  "setGenThemeTerminal": "Terminale",
   "setGenThemeTe": "Terminale",
+  "setGenThemeLt": "Terminale chiaro",
+  "setGenThemeHighContrast": "Alto contrasto",
   "setGenThemeHc": "Alto contrasto",
+  "setGenThemeSol": "Abbronzato",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenMoreThemes": "Altri temi",
+  "setGenAutoSwitchTheme": "Passa automaticamente dal tema chiaro a scuro quando possibile",
   "setGenLocale": "Lingua",
   "setGenLocOther": "altre lingue sono disponibili con i plugin",
   "setGenFontSize": "Dimensione carattere",
@@ -410,6 +431,15 @@
   "setGenTryBetaWarningBody": "Per favore, salva tutti i file e clicca nuovamente questo bottone",
   "setGenShowAppLogs": "Mostra log app",
   "setGenReloadApp": "Ricarica l'app",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Non usare Touch ID",
+  "setGenTouchIdMemory": "Sblocca con Touch ID solo quando KeeWeb è in esecuzione",
+  "setGenTouchIdFile": "Usa sempre Touch ID invece della master password",
+  "setGenTouchIdPass": "Richiedi la master password dopo",
+  "setGenExcludePinsFromAudit": "Non controllare codici numerici corti (PIN), tipo 123456",
+  "setGenCheckPasswordsOnHIBP": "Controlla la password usando un servizio online {}",
+  "setGenHelpHIBPLink": "qui",
+  "setGenAuditPasswordAge": "Vecchia password",
   "setFilePath": "Percorso file",
   "setFileStorage": "Questo file è stato caricato da {}.",
   "setFileIntl": "Questo file è salvato nella memoria interna dell'applicazione",
@@ -617,5 +647,6 @@
   "yubiKeyTouchRequestedBody": "inserisci la tua YubiKey con il numero di serie {}",
   "yubiKeyDisabledErrorHeader": "La USB è disabilitata",
   "yubiKeyDisabledErrorBody": "La YubiKey è necessaria per aprire questo file, abilitare i dispositivi USB nelle impostazioni.",
-  "yubiKeyErrorWithCode": "Errore YubiKey, codice {}."
+  "yubiKeyErrorWithCode": "Errore YubiKey, codice {}.",
+  "bioOpenAuthPrompt": "apri \"{}\""
 }
