--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,7 +1,7 @@
 {
   "retToApp": "terug naar de app",
   "name": "naam",
-  "icon": "Pictogram",
+  "icon": "pictogram",
   "title": "titel",
   "password": "wachtwoord",
   "user": "gebruiker",
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "fout",
+  "oneMinute": "een minuut",
+  "minutes": "{} minuten",
+  "oneHour": "een uur",
+  "hours": "{} uur",
+  "oneDay": "een dag",
+  "days": "{} dagen",
+  "oneWeek": "een week",
+  "oneMonth": "een maand",
+  "oneYear": "een jaar",
   "cache": "cache",
   "file": "bestand",
   "device": "apparaat",
@@ -298,6 +307,7 @@
   "autoTypeLink": "meer...",
   "autoTypeError": "Auto-typefout",
   "autoTypeErrorGeneric": "Er is een fout opgetreden tijdens de uitvoering van Auto-type: {}",
+  "autoTypeErrorAccessibilityMacOS": "We hebben geprobeerd toetsaanslagen naar de applicatie te sturen, maar het lijkt niet te werken. Dit kan gebeuren vanwege ontbrekende rechten, klik hier om er meer over te lezen:",
   "autoTypeErrorGlobal": "Om de globale sneltoets te gebruiken, selecteer de app waar je je wachtwoord wilt typen",
   "autoTypeErrorNotInstalled": "{} is niet geïnstalleerd",
   "autoTypeHeader": "Auto-Type: Selectie",
@@ -415,12 +425,14 @@
   "setGenClearSeconds": "{} seconden",
   "setGenClearMinute": "1 minuut",
   "setGenMinInstead": "De app niet sluiten maar minimaliseren",
+  "setGenMinOnFieldCopy": "Minimaliseren bij het kopiëren van het veld",
   "setGenLock": "Automatisch vergrendelen",
   "setGenLockMinimize": "Als de app wordt geminimaliseerd",
   "setGenLockCopy": "Bij kopiëren van wachtwoord",
   "setGenLockAutoType": "Bij Auto-type",
   "setGenLockOrSleep": "Als de computer wordt vergrendeld of in slaapstand gaat",
   "setGenStorage": "Opslag",
+  "setGenDisableOfflineStorage": "Maak geen tijdelijke offline opslag van geladen bestanden",
   "setGenStorageLogout": "Uitloggen",
   "setGenShowAdvanced": "Geavanceerde instellingen weergeven",
   "setGenDevTools": "Ontwikkelaarstools weergeven",
@@ -430,6 +442,12 @@
   "setGenShowAppLogs": "App-logs weergeven",
   "setGenReloadApp": "App opnieuw laden",
   "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
+  "setGenUseLegacyAutoType": "Gebruik legacy auto-type (als u problemen ondervindt)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Geen Touch ID gebruiken",
+  "setGenTouchIdMemory": "Alleen met Touch ID ontgrendelen als KeeWeb actief is",
+  "setGenTouchIdFile": "Altijd Touch ID gebruiken in plaats van het hoofdwachtwoord",
+  "setGenTouchIdPass": "Hoofdwachtwoord bevestigen na",
   "setGenAudit": "Controle",
   "setGenAuditPasswords": "Waarschuwingen over wachtwoordsterkte weergeven",
   "setGenAuditPasswordEntropy": "Wachtwoordlengte en willekeurigheid controleren",
