--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "błąd",
+  "oneMinute": "Jednej minucie",
+  "minutes": "{} minutach",
+  "oneHour": "Jednej godzinie",
+  "hours": "{} godzinach",
+  "oneDay": "Jednym dniu",
+  "days": "{} dniach",
+  "oneWeek": "Jednym tygodniu",
+  "oneMonth": "Jednym miesiącu",
+  "oneYear": "Jednym roku",
   "cache": "Cache",
   "file": "Plik",
   "device": "Urządzenie",
@@ -298,6 +307,7 @@
   "autoTypeLink": "Więcej...",
   "autoTypeError": "Błąd automatycznego wpisywania",
   "autoTypeErrorGeneric": "Wystąpił błąd podczas wykonywania automatycznego wpisywania: {}",
+  "autoTypeErrorAccessibilityMacOS": "Próbowaliśmy wysłać naciśnięcia klawiszy do aplikacji, ale wygląda na to, że to nie działa. Może się tak zdarzyć z powodu brakujących uprawnień, kliknij tutaj, aby przeczytać więcej na ten temat:",
   "autoTypeErrorGlobal": "Aby użyć skrótu systemowego, uaktywnij aplikację, w której chcesz wpisać hasło",
   "autoTypeErrorNotInstalled": "{} nie jest zainstalowany",
   "autoTypeHeader": "Automatyczne wpisywanie: wybierz",
@@ -415,12 +425,14 @@
   "setGenClearSeconds": "Po {} sekundach",
   "setGenClearMinute": "Po minucie",
   "setGenMinInstead": "Zminimalizuj aplikację zamiast ją zamykać",
+  "setGenMinOnFieldCopy": "Zminimalizuj przy kopiowaniu pola",
   "setGenLock": "Autoblokowanie",
   "setGenLockMinimize": "Gdy aplikacja jest zminimalizowana",
   "setGenLockCopy": "Po skopiowaniu hasła",
   "setGenLockAutoType": "Przy automatycznym wpisywaniu",
   "setGenLockOrSleep": "Gdy komputer jest zablokowany lub uśpiony",
   "setGenStorage": "Przechowywanie",
+  "setGenDisableOfflineStorage": "Nie buforuj załadowanych plików w pamięci offline",
   "setGenStorageLogout": "Wyloguj",
   "setGenShowAdvanced": "Pokaż zaawansowane ustawienia (mogą być niebezpieczne)",
   "setGenDevTools": "Pokaż narzędzia twórcy",
@@ -430,6 +442,12 @@
   "setGenShowAppLogs": "Pokaż logi aplikacji",
   "setGenReloadApp": "Załaduj ponownie aplikację",
   "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
+  "setGenUseLegacyAutoType": "Używaj starszego automatycznego wpisywania (jeśli masz problemy)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Nie używaj Touch ID",
+  "setGenTouchIdMemory": "Odblokuj za pomocą Touch ID tylko wtedy, gdy działa KeeWeb",
+  "setGenTouchIdFile": "Zawsze używaj Touch ID zamiast hasła głównego",
+  "setGenTouchIdPass": "Wymagaj hasła głównego po",
   "setGenAudit": "Audyt",
   "setGenAuditPasswords": "Pokaż ostrzeżenia o sile hasła",
   "setGenAuditPasswordEntropy": "Sprawdź długość i losowość hasła",
@@ -658,5 +676,5 @@
   "yubiKeyDisabledErrorHeader": "USB jest wyłączone",
   "yubiKeyDisabledErrorBody": "YubiKey jest wymagany do otwarcia tego pliku, włącz urządzenia USB w ustawieniach.",
   "yubiKeyErrorWithCode": "Błąd YubiKey, kod {}.",
-  "bioOpenAuthPrompt": "otworzyć plik {}"
+  "bioOpenAuthPrompt": "otworzyć \"{}\""
 }
