--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "ошибка",
+  "oneMinute": "Одна минута",
+  "minutes": "{} минут",
+  "oneHour": "Один час",
+  "hours": "{} часов",
+  "oneDay": "Один день",
+  "days": "{} дней",
+  "oneWeek": "Одна неделя",
+  "oneMonth": "Один месяц",
+  "oneYear": "Один год",
   "cache": "кэш",
   "file": "Файл",
   "device": "устройство",
@@ -188,6 +197,7 @@
   "openListErrorBody": "При загрузке списка файлов произошла ошибка",
   "openShowAllFiles": "Показать все файлы",
   "openFileNoCacheError": "Файл не найден в кэше. Это могло произойти из-за очистки хранилища браузера. Для открытия файла удалите его из KeeWeb и добавьте снова.",
+  "openChalRespHeader": "Вызов-ответ",
   "openChalRespLoading": "Загрузка списка YubiKey-устройств",
   "openChalRespSelectYubiKey": "Выберите YubiKey который хотите использовать",
   "openChalRespErrorEmpty": "YubiKey не найден",
@@ -284,6 +294,7 @@
   "detRevealField": "Показать",
   "detHideField": "Скрыть",
   "detAutoTypeField": "Автозаполнение",
+  "detIssueOldPassword": "Старый пароль.",
   "autoTypeEntryFields": "Поля ввода",
   "autoTypeModifiers": "Клавиши-модификаторы",
   "autoTypeKeys": "Ключи",
@@ -314,6 +325,7 @@
   "appSaveError": "Ошибка сохранения",
   "appSaveErrorBody": "Не удалось автоматически сохранить файл",
   "appSaveErrorBodyMul": "Не удалось автоматически сохранить файлы:",
+  "appSaveErrorExitLoseChanges": "Выйти и потерять все изменения",
   "appSettingsError": "Ошибка загрузки приложения",
   "appSettingsErrorBody": "Произошла ошибка при загрузке настроек приложения. Пожалуйста, дважды проверьте URL-адрес приложения или обратитесь к вашему администратору.",
   "appNotSupportedError": "Ваш браузер не поддерживает некоторые важные функции, которые мы используем.",
@@ -355,6 +367,7 @@
   "setGenThemeHc": "Высокая контрастность",
   "setGenThemeSd": "Выцветшая темная",
   "setGenThemeSl": "Выцветшая светлая",
+  "setGenMoreThemes": "Другие темы",
   "setGenLocale": "Язык",
   "setGenLocOther": "другие языки доступны в качестве подключаемых модулей",
   "setGenFontSize": "Размер шрифта",
@@ -405,6 +418,16 @@
   "setGenTryBetaWarningBody": "Сохраните все файлы и снова нажмите эту кнопку",
   "setGenShowAppLogs": "Журнал приложения",
   "setGenReloadApp": "Перезагрузить приложение",
+  "setGenUseLegacyAutoType": "Используйте устаревший автоматический ввод (в случае возниконовения проблемы)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Не использовать Touch ID",
+  "setGenTouchIdMemory": "Разблокировка с помощью Touch ID только при запущенном KeeWeb",
+  "setGenTouchIdFile": "Всегда использовать Touch ID вместо мастер-пароля",
+  "setGenTouchIdPass": "Запрашивать мастер-пароль после",
+  "setGenAudit": "Аудит",
+  "setGenAuditPasswords": "Показывать предупреждения о надежности пароля",
+  "setGenAuditPasswordAge": "Старые пароли",
+  "setGenAuditPasswordAgeOff": "Не показывать предупреждения о старых паролях",
   "setFilePath": "Путь к файлу",
   "setFileStorage": "Это файл загружен из {}.",
   "setFileIntl": "Этот файл хранится во внутренней памяти приложения",
