--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "错误",
+  "oneMinute": "1分钟",
+  "minutes": "{}分钟",
+  "oneHour": "1小时",
+  "hours": "{}小时",
+  "oneDay": "1天",
+  "days": "{}天",
+  "oneWeek": "1周",
+  "oneMonth": "1月",
+  "oneYear": "1年",
   "cache": "缓存",
   "file": "密码数据库",
   "device": "设备",
@@ -428,6 +437,12 @@
   "setGenShowAppLogs": "显示应用日志",
   "setGenReloadApp": "重新加载应用",
   "setGenFieldLabelDblClickAutoType": "双击字段标签时自动键入",
+  "setGenUseLegacyAutoType": "使用旧版自动填充(如果使用中出现异常)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "不使用Touch ID",
+  "setGenTouchIdMemory": "仅当KeeWeb正在运行时, 使用Touch ID解锁",
+  "setGenTouchIdFile": "总是使用Touch ID代替主密码",
+  "setGenTouchIdPass": "需要重新输入主密码",
   "setGenAudit": "检查",
   "setGenAuditPasswords": "显示有关密码强度的警告",
   "setGenAuditPasswordEntropy": "检查密码长度和随机性",
