--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "hiba",
+  "oneMinute": "egy perc",
+  "minutes": "{} perc",
+  "oneHour": "egy óra",
+  "hours": "{} óra",
+  "oneDay": "egy nap",
+  "days": "{} nap",
+  "oneWeek": "egy hét",
+  "oneMonth": "egy hónap",
+  "oneYear": "egy év",
   "cache": "gyorsítótár",
   "file": "fájl",
   "device": "Eszköz",
@@ -292,6 +301,10 @@
   "detIssuePwnedPassword": "Ez a jelszó a {} szerint adatszivárgásban érintett, javasolt a cseréje.",
   "detIssuePasswordCheckError": "Hiba történt a jelszó erősségének online ellenőrzésekor.",
   "detIssueOldPassword": "A jelszó régi.",
+  "detIssueCloseAlertHeader": "Jelszóproblémák elrejtése",
+  "detIssueCloseAlertBody": "Különböző módokon lehet ezt a figyelmeztetést elrejteni:",
+  "detIssueCloseAlertEntry": "Ne mutassa erre a bejegyzésre",
+  "detIssueCloseAlertSettings": "Globális beállítások szerkesztése",
   "autoTypeEntryFields": "Beviteli mezők",
   "autoTypeModifiers": "Módosító kulcsok",
   "autoTypeKeys": "Kulcsok",
@@ -415,12 +428,14 @@
   "setGenClearSeconds": "{} másodpercen belül",
   "setGenClearMinute": "Egy percen belül",
   "setGenMinInstead": "Az alkalmazás minimalizálása bezárás helyett",
+  "setGenMinOnFieldCopy": "Mező másolásakor minimalizálás",
   "setGenLock": "Automatikus zárolás",
   "setGenLockMinimize": "Amikor az alkalmazás kisméretű",
   "setGenLockCopy": "Automatikus zárolás jelszó másolásnál",
   "setGenLockAutoType": "Automatikus gépelés esetén",
   "setGenLockOrSleep": "Amikor a számítógép zárolt, vagy alvó állapotban van",
   "setGenStorage": "Tároló",
+  "setGenDisableOfflineStorage": "Ne gyorsítótárazza a fájlokat az  offline tárolóra",
   "setGenStorageLogout": "Kijelentkezés",
   "setGenShowAdvanced": "Haladó beállítások megjelenítése",
   "setGenDevTools": "Fejlesztőeszközök megjelenítése",
@@ -430,6 +445,7 @@
   "setGenShowAppLogs": "Alkalmazás napló megjelenítése",
   "setGenReloadApp": "Az alkalmazás újratöltése",
   "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
+  "setGenUseLegacyAutoType": "Régi automatikus gépelés (ha problémák adódnak)",
   "setGenAudit": "Ellenőrzés",
   "setGenAuditPasswords": "Jelszó erősségével kapcsolatos figyelmeztetések",
   "setGenAuditPasswordEntropy": "Jelszó hossz és véletlenszerűség ellenőrzése",
