--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -301,6 +301,10 @@
   "detIssuePwnedPassword": "To hasło zostało ujawnione w wyniku wycieku danych według {}, zaleca się jego zmianę.",
   "detIssuePasswordCheckError": "Wystąpił błąd podczas sprawdzania online siły hasła.",
   "detIssueOldPassword": "Hasło jest stare.",
+  "detIssueCloseAlertHeader": "Ukryj problemy z hasłem",
+  "detIssueCloseAlertBody": "Istnieją różne sposoby na ukrycie tego ostrzeżenia:",
+  "detIssueCloseAlertEntry": "Nie pokazuj dla tego wpisu",
+  "detIssueCloseAlertSettings": "Dostosuj ustawienia globalne",
   "autoTypeEntryFields": "Pola wpisu",
   "autoTypeModifiers": "Klawisze modyfikujące",
   "autoTypeKeys": "Klawisze",
