--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,5 +1,5 @@
 {
-  "retToApp": "terug naar de app",
+  "retToApp": "Terug naar de app",
   "name": "naam",
   "icon": "pictogram",
   "title": "titel",
@@ -37,7 +37,7 @@
   "oneYear": "een jaar",
   "cache": "cache",
   "file": "bestand",
-  "device": "apparaat",
+  "device": "Apparaat",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -198,7 +198,7 @@
   "openShowAllFiles": "Alle bestanden weergeven",
   "openFileNoCacheError": "Bestand niet aangetroffen in de cache-opslag. Dit kan gebeuren omdat de browseropslag is gewist. Om het bestand te openen moet je het eerst verwijderen uit KeeWeb en daarna opnieuw toevoegen.",
   "openChalRespHeader": "Challenge-Response",
-  "openChalRespLoading": "Bezig met verzamelen van de lijst van YubiKeys",
+  "openChalRespLoading": "Lijst van YubiKeys laden...",
   "openChalRespSelectYubiKey": "Selecteer de YubiKey die je wilt gebruiken",
   "openChalRespErrorEmpty": "Geen YubiKeys gevonden.",
   "openChalRespErrorEmptyMac": "Is dit de eerste keer dat je deze functie gebruikt op macOS? KeeWeb moet worden toegevoegd aan de input monitoring sectie van de beveiligingsinstellingen.",
@@ -208,7 +208,7 @@
   "detEmpty": "Je wachtwoorden worden hier weergegeven",
   "detGroupRestore": "Om deze groep te herstellen sleep je het naar een willekeurige groep buiten de prullenbak",
   "detHistoryClickPoint": "Klik op het item in de geschiedenistijdlijn om de status te bekijken",
-  "detHistoryReturn": "terug naar item",
+  "detHistoryReturn": "Terug naar item",
   "detHistoryRevert": "Status herstellen",
   "detHistoryDel": "Status verwijderen",
   "detHistoryEmpty": "leeg",
@@ -226,7 +226,7 @@
   "detHistoryDeleteAlertBody": "Je kunt dit niet meer herstellen!",
   "detHistoryDiscardChangesAlert": "Wijzigingen in dit item ongedaan maken?",
   "detHistoryDiscardChangesAlertBody": "Niet-opgeslagen wijzigingen gaan verloren, er is geen weg terug.",
-  "detBackToList": "terug naar de lijst",
+  "detBackToList": "Terug naar de lijst",
   "detSetIconColor": "Kleur wijzigen",
   "detSetIcon": "Pictogram wijzigen",
   "detDropAttachments": "Sleep bijlagen hierheen",
@@ -255,10 +255,10 @@
   "detMenuAddField": "{} Toevoegen",
   "detMenuCopyPassword": "Wachtwoord kopiëren",
   "detMenuCopyUser": "Gebruiker kopiëren",
-  "detMenuCopyOtp": "Kopieer de eenmalige code",
+  "detMenuCopyOtp": "Eenmalige code kopiëren",
   "detSetupOtp": "Eenmalige codes",
   "detClone": "Dupliceren",
-  "detCopyEntryToClipboard": "Kopieer alle velden",
+  "detCopyEntryToClipboard": "Alle velden kopiëren",
   "detClonedName": "Kopiëren",
   "detAutoType": "Auto-type",
   "detAutoTypeSettings": "Auto-type instellingen",
@@ -516,10 +516,10 @@
   "setFileKdfParamsMem": "Geheugen, KB",
   "setFileKdfParamsPar": "Parallelisme",
   "setFileKeyChangeForce": "Vraag om de sleutel aan te passen na (dagen)",
-  "setFileUseKeyFile": "Gebruik sleutelbestand",
-  "setFileUseGenKeyFile": "Gebruik het aangemaakte sleutelbestand",
-  "setFileUseOldKeyFile": "Gebruik het oude sleutelbestand",
-  "setFileGenKeyFile": "Genereer een nieuw sleutelbestand",
+  "setFileUseKeyFile": "Sleutelbestand gebruiken",
+  "setFileUseGenKeyFile": "Het aangemaakte sleutelbestand gebruiken",
+  "setFileUseOldKeyFile": "Het oude sleutelbestand gebruiken",
+  "setFileGenKeyFile": "Een nieuw sleutelbestand aanmaken",
   "setFileDontUseKeyFile": "Gebruik geen sleutelbestand",
   "setFileEmptyPass": "Leeg wachtwoord",
   "setFileEmptyPassBody": "Bij het opslaan van de database zonder wachtwoord blijft alles onbeschermd. Wil je echt doorgaan?",
@@ -532,8 +532,8 @@
   "setFileCloseNoSave": "Sluiten en wijzigingen ongedaan maken",
   "setFileDontClose": "Niet sluiten",
   "setFileFormatVersion": "Bestandsformaat",
-  "setFileExportRaw": "Bezig met exporteren van je wachtwoorden",
-  "setFileExportRawBody": "De geëxporteerde lijst zal je wachtwoorden bevatten. Ze zullen niet versleuteld zijn. Wil je doorgaan?",
+  "setFileExportRaw": "Wachtwoorden exporteren...",
+  "setFileExportRawBody": "De geëxporteerde lijst bevat je wachtwoorden in leesbare, onversleutelde vorm. Wil je hiermee doorgaan?",
   "setFileDeviceIntro": "Eenmalige codes van deze {} worden in de app weergegeven.",
   "setFileDeviceSettings": "Instellingen",
   "setFileYubiKey": "YubiKey",
@@ -548,7 +548,7 @@
   "setShTrash": "Prullenbak",
   "setShFind": "Zoeken, of begin gewoon te typen",
   "setShClearSearch": "Zoekopdracht wissen",
-  "setShCopyPass": "kopieer wachtwoord of geselecteerd veld",
+  "setShCopyPass": "Wachtwoord of geselecteerd veld kopiëren",
   "setShCopyUser": "Gebruiker kopiëren",
   "setShCopyUrl": "Website kopiëren",
   "setShAutoType": "Auto-type geselecteerd item",
@@ -622,7 +622,7 @@
   "setAboutLic": "Licentie",
   "setAboutLicComment": "De app zelf en alle meegeleverde componenten zijn gelicentieerd onder MIT-licentie, tenzij anders aangegeven",
   "setAboutFirst": "Dit is een open source applicatie gemaakt door {}",
-  "setAboutSecond": "en gelicenseerd onder {}.",
+  "setAboutSecond": "en gelicentieerd onder {}.",
   "setAboutSource": "De broncode en issues zijn beschikbaar op {}.",
   "setHelpFormat": "Bestandsformaat",
   "setHelpFormatBody": "Dit is een port van de {} app gebouwd met web-technologie. Het werkt met bestanden van het KeePass formaat (kdbx). Je kunt deze bestanden (wachtwoord databases) aanmaken in KeePass of in deze app zelf. Het bestandsformaat is 100% compatibel en zou door beide apps verwerkt moeten kunnen worden.",
