--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -26,6 +26,15 @@
   "shiftKey": "shift",
   "altKey": "alt",
   "error": "chyba",
+  "oneMinute": "minúta",
+  "minutes": "{} minút",
+  "oneHour": "hodine",
+  "hours": "{} hodinách",
+  "oneDay": "dni",
+  "days": "{} dňoch",
+  "oneWeek": "týždni",
+  "oneMonth": "mesiaci",
+  "oneYear": "roku",
   "cache": "cache",
   "file": "súbor",
   "device": "zariadenie",
@@ -292,12 +301,17 @@
   "detIssuePwnedPassword": "Toto heslo sa nachádza v zozname prelomených hesiel podľa {}, je odporúčané ho zmeniť.",
   "detIssuePasswordCheckError": "Pri online overení sily hesla nastala chyba.",
   "detIssueOldPassword": "Heslo je staré.",
+  "detIssueCloseAlertHeader": "Skryť problémy s heslom",
+  "detIssueCloseAlertBody": "Sú rôzne spôsoby ako skryť tieto upozornenia:",
+  "detIssueCloseAlertEntry": "Nezobrazovať pre tento záznam",
+  "detIssueCloseAlertSettings": "Prispôsobiť globálne nastavenia",
   "autoTypeEntryFields": "Polia záznamu",
   "autoTypeModifiers": "Špeciálne klávesy",
   "autoTypeKeys": "Klávesy",
   "autoTypeLink": "viac...",
   "autoTypeError": "Chyba auto-type",
   "autoTypeErrorGeneric": "Chyba počas vykonávania auto-type: {}",
+  "autoTypeErrorAccessibilityMacOS": "Snažili sme sa poslať stlačenia klávesov do aplikácie, ale zrejme to nezafungovalo. Môže to byť spôsobené chýbajúcimi oprávneniami, kliknutím sem sa dočítate viac informácií:",
   "autoTypeErrorGlobal": "Pre použitie globálnych skratiek, prosím kliknite do aplikácie, kde chcete heslo zadať.",
   "autoTypeErrorNotInstalled": "{} nie je nainštalovaný",
   "autoTypeHeader": "Auto-Type: Vybrať",
@@ -415,12 +429,14 @@
   "setGenClearSeconds": "Za {} sekúnd",
   "setGenClearMinute": "Za minútu",
   "setGenMinInstead": "Minimalizovať aplikáciu namiesto zatvorenia",
+  "setGenMinOnFieldCopy": "Minimalizovať po skopírovaní pola",
   "setGenLock": "Automatické zamykanie",
   "setGenLockMinimize": "Keď je aplikácia minimalizovaná",
   "setGenLockCopy": "Po skopírovaní hesla",
   "setGenLockAutoType": "Po auto-type",
   "setGenLockOrSleep": "Keď je počítač zamknutý alebo uspaný",
   "setGenStorage": "Úložisko",
+  "setGenDisableOfflineStorage": "Neukladať nahraté súbory do offline úložiska",
   "setGenStorageLogout": "Odhlásiť",
   "setGenShowAdvanced": "Zobraziť pokročilé nastavenia",
   "setGenDevTools": "Zobraziť vývojárske nástroje",
@@ -430,6 +446,12 @@
   "setGenShowAppLogs": "Zobraziť logy",
   "setGenReloadApp": "Reštartovať aplikáciu",
   "setGenFieldLabelDblClickAutoType": "Auto-type dvojitým kliknutím na popis pola",
+  "setGenUseLegacyAutoType": "Použiť pôvodný auto-type (ak máte problémy)",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Nepoužívať Touch ID",
+  "setGenTouchIdMemory": "Odomknúť s Touch ID len keď je KeeWeb spustený",
+  "setGenTouchIdFile": "Vždy použiť Touch ID namiesto hlavného hesla",
+  "setGenTouchIdPass": "Vyžadovať hlavné heslo po",
   "setGenAudit": "Audit",
   "setGenAuditPasswords": "Zobrazovať upozornenia o sile hesla",
   "setGenAuditPasswordEntropy": "Overiť dĺžku hesla a náhodnosť",
