--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,20 +1,20 @@
 {
   "retToApp": "Terug naar de app",
-  "name": "naam",
-  "icon": "pictogram",
-  "title": "titel",
+  "name": "Naam",
+  "icon": "Pictogram",
+  "title": "Titel",
   "password": "wachtwoord",
-  "user": "gebruiker",
-  "website": "website",
-  "tags": "labels",
-  "notes": "notities",
-  "entry": "item",
-  "group": "groep",
-  "noTitle": "geen titel",
+  "user": "Gebruiker",
+  "website": "Website",
+  "tags": "Labels",
+  "notes": "Notities",
+  "entry": "Item",
+  "group": "Groep",
+  "noTitle": "Geen titel",
   "or": "of",
-  "history": "geschiedenis",
-  "template": "sjabloon",
-  "notImplemented": "niet geïmplementeerd",
+  "history": "Geschiedenis",
+  "template": "Sjabloon",
+  "notImplemented": "Niet geïmplementeerd",
   "saveChanges": "Wijzigingen opslaan",
   "discardChanges": "Ongedaan maken",
   "advanced": "Geavanceerd",
@@ -22,9 +22,9 @@
   "help": "Help",
   "settings": "Instellingen",
   "plugins": "Plug-ins",
-  "ctrlKey": "ctrl",
-  "shiftKey": "shift",
-  "altKey": "alt",
+  "ctrlKey": "Ctrl",
+  "shiftKey": "Shift",
+  "altKey": "Alt",
   "error": "fout",
   "oneMinute": "een minuut",
   "minutes": "{} minuten",
